--- a/public/locales/mk/translation.json
+++ b/public/locales/mk/translation.json
@@ -132,8 +132,20 @@
     "description": "Сакаме да слушнеме од вас. Контактирајте не за било какви прашања за нашите производи и услуги."
   },
   "footer": {
-    "description": "Високо квалитетна производство на мебел и душеци во партнерство со Starflex. Комбинирајќи удобност, издржливост и стил со модерна технологија.",
-    "quickLinks": "Брзи врски",
+    "tagline": "Квалитет од 1992",
+    "description": "Водечки добавувач на суровини за мебел и производство на душеци. Над 30 години совршенство во индустријата.",
+    "yearsExperience": "Години Искуство",
+    "quickLinks": "Брзи Врски",
+    "products": "Наши Производи",
+    "contact": "Контактирајте Не",
+    "address": "Приштина, Косово",
+    "workingHours": "Пон - Пет: 8:00 - 17:00",
+    "saturday": "Саб: 9:00 - 14:00",
+    "followUs": "Следете Не",
+    "officialPartner": "Официјален Партнер",
+    "rights": "Сите права задржани.",
+    "privacy": "Политика на Приватност",
+    "terms": "Услови за Користење",
     "partners": "Партнери",
     "copyright": "© 2025 DoqiSHPK. Сите права задржани."
   },
