--- a/public/locales/sr/translation.json
+++ b/public/locales/sr/translation.json
@@ -132,8 +132,20 @@
     "description": "Волели бисмо да чујемо од вас. Контактирајте нас за било која питања о нашим производима и услугама."
   },
   "footer": {
-    "description": "Висококвалитетна производња намештаја и душека у партнерству са Starflex. Комбинујући удобност, трајност и стил са модерном технологијом.",
-    "quickLinks": "Брзе везе",
+    "tagline": "Квалитет од 1992",
+    "description": "Водећи добављач сировина за намештај и производњу душека. Преко 30 година изврсности у индустрији.",
+    "yearsExperience": "Година Искуства",
+    "quickLinks": "Брзе Везе",
+    "products": "Наши Производи",
+    "contact": "Контактирајте Нас",
+    "address": "Приштина, Косово",
+    "workingHours": "Пон - Пет: 8:00 - 17:00",
+    "saturday": "Суб: 9:00 - 14:00",
+    "followUs": "Пратите Нас",
+    "officialPartner": "Званични Партнер",
+    "rights": "Сва права задржана.",
+    "privacy": "Политика Приватности",
+    "terms": "Услови Коришћења",
     "partners": "Партнери",
     "copyright": "© 2025 DoqiSHPK. Сва права задржана."
   },
