--- a/public/locales/bs/translation.json
+++ b/public/locales/bs/translation.json
@@ -132,8 +132,20 @@
     "description": "Voljeli bismo čuti od vas. Kontaktirajte nas za bilo koja pitanja o našim proizvodima i uslugama."
   },
   "footer": {
-    "description": "Visokokvalitetna proizvodnja namještaja i dušeka u partnerstvu sa Starflex. Kombinirajući udobnost, trajnost i stil sa modernom tehnologijom.",
-    "quickLinks": "Brze veze",
+    "tagline": "Kvalitet od 1992",
+    "description": "Vodeći dobavljač sirovina za namještaj i proizvodnju dušeka. Preko 30 godina izvrsnosti u industriji.",
+    "yearsExperience": "Godina Iskustva",
+    "quickLinks": "Brze Veze",
+    "products": "Naši Proizvodi",
+    "contact": "Kontaktirajte Nas",
+    "address": "Priština, Kosovo",
+    "workingHours": "Pon - Pet: 8:00 - 17:00",
+    "saturday": "Sub: 9:00 - 14:00",
+    "followUs": "Pratite Nas",
+    "officialPartner": "Zvanični Partner",
+    "rights": "Sva prava zadržana.",
+    "privacy": "Politika Privatnosti",
+    "terms": "Uslovi Korištenja",
     "partners": "Partneri",
     "copyright": "© 2025 DoqiSHPK. Sva prava zadržana."
   },
