--- a/public/locales/mk/translation.json
+++ b/public/locales/mk/translation.json
@@ -251,8 +251,77 @@
     },
     "review3": {
       "name": "Ана К.",
-      "role": "Менаџерка на Хотел",
-      "comment": "Го намештивме целиот наш хотел со материјали од Doqi. Комбинацијата на издржливост, стил и конкурентни цени ги направи тие наш преферiran партнер. Нашите гости постојано ја фалат модерната естетика."
+      "role": "Менаџер на Хотел",
+      "comment": "Го опремивме целиот наш хотел со материјали од Doqi. Комбинацијата на издржливост, стил и конкурентни цени ги направи нашиот преферирач партнер. Нашите гости постојано ја фалат модерната естетика."
+    }
+  },
+  "starflex": {
+    "badge": "Премиум Колекција Душеци",
+    "hero": {
+      "subtitle": "Спијте во Врвна Удобност",
+      "description": "Доживејте совршена комбинација на удобност, поддршка и квалитет. Нашите премиум душеци се дизајнирани да ви дадат најдобар сон во вашиот живот.",
+      "shopNow": "Купете Душеци",
+      "contact": "Контактирајте Нè"
+    },
+    "since": "Од",
+    "years": "Години",
+    "customers": "Задоволни Клиенти",
+    "certified": "Сертифицирано",
+    "certifiedText": "Меѓународни Стандарди",
+    "whyChoose": "Зошто да Изберете StarFlex?",
+    "whyChooseDescription": "Откријте што ги прави нашите душеци совршен избор за вашите потреби за спиење",
+    "features": {
+      "quality": {
+        "title": "Премиум Квалитет",
+        "description": "Сертифицирани материјали што ги исполнуваат меѓународните стандарди за удобност и издржливост."
+      },
+      "comfort": {
+        "title": "Врвна Удобност",
+        "description": "Напредна технologija пена што обезбедува оптимална поддршка за одморен сон."
+      },
+      "variety": {
+        "title": "Широк Асортиман",
+        "description": "Повеќе величини и нивоа на цврстина за секоја преференца."
+      },
+      "warranty": {
+        "title": "10-Годишна Гаранција",
+        "description": "Долготрајна квалитет поддржан со сеопфатна гаранциска покриеност."
+      },
+      "delivery": {
+        "title": "Брза Достава",
+        "description": "Брза и доверлива услуга за достава низ Косово и пошироко."
+      },
+      "health": {
+        "title": "Здравствена Поддршка",
+        "description": "Ортопедски дизајн што промовира правилно порамнување на 'рбетниот столб."
+      }
+    },
+    "ourCollection": "Наша Колекција Душеци",
+    "collectionDescription": "Најдете совршен душек приспособен на вашите преференци за удобност",
+    "types": {
+      "orthopedic": {
+        "name": "Ортопедски",
+        "description": "Медицинска поддршка за здравје на грбот"
+      },
+      "memory": {
+        "name": "Memory Foam",
+        "description": "Се приспособува на формата на вашето тело"
+      },
+      "pocket": {
+        "name": "Pocket Spring",
+        "description": "Индивидуални џебни опруги за изолација на движење"
+      },
+      "hybrid": {
+        "name": "Хибриден",
+        "description": "Комбинација на пена и опруги"
+      }
+    },
+    "viewDetails": "Погледни Детали",
+    "cta": {
+      "title": "Подготвени за Подобар Сон?",
+      "description": "Посетете го нашиот шоурум или контактирајте нè денес за да го најдете вашиот совршен душек",
+      "visitShowroom": "Посетете Шоурум",
+      "browseCollection": "Прегледајте Колекција"
     }
   }
 }
