--- a/public/locales/sr/translation.json
+++ b/public/locales/sr/translation.json
@@ -251,8 +251,77 @@
     },
     "review3": {
       "name": "Ана К.",
-      "role": "Менаџерка Хотела",
-      "comment": "Наместили смо цео наш хотел материјалима од Doqi. Комбинација издржљивости, стила и конкурентних цена учинила их је нашим преферираним партнером. Наши гости стално хвале модерну естетику."
+      "role": "Менаџер Хотела",
+      "comment": "Опремили смо цео наш хотел материјалима од Doqi. Комбинација издржљивости, стила и конкурентних цена учинила их је нашим преферираним партнером. Наши гости стално хвале модерну естетику."
+    }
+  },
+  "starflex": {
+    "badge": "Премијум Колекција Душека",
+    "hero": {
+      "subtitle": "Спавајте у Врхунској Удобности",
+      "description": "Доживите савршену комбинацију удобности, подршке и квалитета. Наши премијум душеци дизајнирани су да вам пруже најбољи сан у вашем животу.",
+      "shopNow": "Купите Душеке",
+      "contact": "Контактирајте Нас"
+    },
+    "since": "Од",
+    "years": "Година",
+    "customers": "Задовољних Купаца",
+    "certified": "Сертификовано",
+    "certifiedText": "Међународни Стандарди",
+    "whyChoose": "Зашто Одабрати StarFlex?",
+    "whyChooseDescription": "Откријте шта наше душеке чини савршеним избором за ваше потребе спавања",
+    "features": {
+      "quality": {
+        "title": "Премијум Квалитет",
+        "description": "Сертификовани материјали који задовољавају међународне стандарде удобности и издржљивости."
+      },
+      "comfort": {
+        "title": "Врхунска Удобност",
+        "description": "Напредна технологија пене која пружа оптималну подршку за одморан сан."
+      },
+      "variety": {
+        "title": "Широк Асортиман",
+        "description": "Више величина и нивоа чврстине за сваку преференцију."
+      },
+      "warranty": {
+        "title": "10-Годишња Гаранција",
+        "description": "Дуготрајна квалитет подржан свеобухватном гаранцијом."
+      },
+      "delivery": {
+        "title": "Брза Достава",
+        "description": "Брза и поуздана услуга доставе широм Косова и шире."
+      },
+      "health": {
+        "title": "Здравствена Подршка",
+        "description": "Ортопедски дизајн који промовише правилно поравнање кичме."
+      }
+    },
+    "ourCollection": "Наша Колекција Душека",
+    "collectionDescription": "Пронађите савршен душек прилагођен вашим преференцијама удобности",
+    "types": {
+      "orthopedic": {
+        "name": "Ортопедски",
+        "description": "Медицинска подршка за здравље леђа"
+      },
+      "memory": {
+        "name": "Memory Foam",
+        "description": "Прилагођава се облику вашег тела"
+      },
+      "pocket": {
+        "name": "Pocket Spring",
+        "description": "Индивидуалне опруге за изолацију покрета"
+      },
+      "hybrid": {
+        "name": "Хибридни",
+        "description": "Комбинација пене и опруга"
+      }
+    },
+    "viewDetails": "Погледај Детаље",
+    "cta": {
+      "title": "Спремни за Бољи Сан?",
+      "description": "Посетите наш showroom или нас контактирајте данас да пронађете свој савршени душек",
+      "visitShowroom": "Посетите Showroom",
+      "browseCollection": "Прегледајте Колекцију"
     }
   }
 }
